# ai-driven-candle-stick-prediction

./: .gitattributes  .gitignore  CHANGELOG_GITHUB_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_SHOWCASE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  SETUP.md  TROUBLESHOOTING.md
reports/: release-notes-v0.2.0.md
scripts/: capture_screenshots.py
src/ai_candle_predictor/application/dto/: backtest.py  chart.py  market_data.py  prediction.py
src/ai_candle_predictor/application/ports/: chart_renderer.py  data_provider.py  feature_store.py  image_storage.py  label_store.py  model_store.py  storage_adapter.py
src/ai_candle_predictor/application/use_cases/: backtest.py  compute_features.py  generate_chart.py  generate_labels.py  ingest_market_data.py  predict.py  train_baseline.py  train_model.py  train_random_forest.py  train_xgboost.py  tune_hyperparameters.py
src/ai_candle_predictor/common/: date_utils.py  dependencies.py  feature_utils.py  symbol_utils.py  theme.py
src/ai_candle_predictor/common/config/: settings.py
src/ai_candle_predictor/common/logging/: __init__.py
src/ai_candle_predictor/domain/entities/: candle.py  indicators.py  label.py  metrics.py  patterns.py
src/ai_candle_predictor/domain/events/: __init__.py
src/ai_candle_predictor/domain/value_objects/: symbol.py
src/ai_candle_predictor/infrastructure/data/: yahoo_provider.py
src/ai_candle_predictor/infrastructure/explainability/: shap_analyzer.py
src/ai_candle_predictor/infrastructure/features/: computations.py  parquet_feature_store.py
src/ai_candle_predictor/infrastructure/labeling/: forward_returns.py  parquet_label_store.py
src/ai_candle_predictor/infrastructure/models/: joblib_store.py  model_registry.py
src/ai_candle_predictor/infrastructure/persistence/: parquet_store.py
src/ai_candle_predictor/infrastructure/visualization/: image_store.py  model_comparison.py  mpl_renderer.py  pattern_detector.py
src/ai_candle_predictor/presentation/api/: main.py
src/ai_candle_predictor/presentation/cli/: main.py
src/ai_candle_predictor/presentation/dashboard/: app.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integration/: test_parquet_stores.py
tests/unit/: test_api.py  test_candle.py  test_cli.py  test_date_utils.py  test_domain_entities.py  test_events.py  test_feature_utils.py  test_model_registry.py  test_shap_analyzer.py  test_symbol.py  test_symbol_utils.py
